added state control and update function and basic input functionality

--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,8 @@
     ./.babelrc
 */
 {
-    "presets":[
+    "plugins": ["transform-class-properties"],
+    "presets": [
         "es2015", "react"
     ]
 }
