--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,6 @@
 {
     "plugins": ["transform-class-properties"],
     "presets": [
-        "es2015", "react"
+        "es2015", "react", "stage-0"
     ]
 }
