--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.5.0"
+    "webpack-dev-server": "^2.5.0",
+    "yarn": "^0.27.5"
   }
 }
